ukol 06 / zformatovani kodu